# home_assistant_eaton_battery_storage_improved

./: .flake8  ACCOUNT_TYPE_GUIDE.md  ACCOUNT_TYPE_SUPPORT.md  COMPLETE_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_REVIEW.md  LOCAL_WORKFLOW_TESTING.md  README.md  document.md  fix_registry.py  pyproject.toml  pytest.ini  requirements-test.txt  test-workflow-locally.sh  test_account_types.py  test_coordinator_behavior.py  test_sensor_filtering.py  validate-workflows.sh  validate.py
.github/: copilot-instructions.md
.github/workflows/: main.yml  test.yml
custom_components/eaton_battery_storage/: __init__.py  api.py  binary_sensor.py  button.py  config_flow.py  coordinator.py  diagnostics.py  event.py  helpers.py  manifest.json  number.py  number_constants.py  quality_scale.yaml  select.py  sensor.py  settings_helpers.py  strings.json  switch.py  system_health.py
custom_components/eaton_battery_storage/translations/: README.txt  en.json
tests/: README.md  __init__.py  conftest.py  conftest_full.py  test_api.py  test_api_simple.py  test_binary_sensor.py  test_button.py  test_config_flow.py  test_config_flow_simple.py  test_const.py  test_coordinator.py  test_diagnostics.py  test_event.py  test_helpers.py  test_init.py  test_integration_structure.py  test_number.py  test_select.py  test_sensor.py  test_simple.py  test_switch.py  test_unit_basic.py
