[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eaton_battery_storage"
version = "0.2.0"
description = "Home Assistant integration for Eaton xStorage Home battery systems"
authors = [
    {name = "genestealer", email = "genestealer@users.noreply.github.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "homeassistant>=2023.1.0",
    "aiohttp",
    "voluptuous",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-homeassistant-custom-component>=0.13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --strict-markers --tb=short"
markers = [
    "asyncio: mark test as asyncio",
    "unit: mark test as unit test",
    "integration: mark test as integration test", 
]

[tool.ruff]
target-version = "py311"
line-length = 88
extend-exclude = [
    ".git",
    "__pycache__",
    ".pytest_cache",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.eaton_battery_storage"]