[project]
name = "eaton-battery-storage"
version = "0.3.0"
description = "Eaton xStorage Home Battery HACS Integration"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
